// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Badge /> matches snapshot with badge content 1`] = `
<div>
  <div
    class="has-content css-wq9933-container-container"
  >
    <span
      class="my-class"
      id="my-id"
    >
      5
    </span>
    Messages
  </div>
</div>
`;

exports[`<Badge /> matches snapshot without badge content 1`] = `
<div>
  <div
    class=" css-wq9933-container-container"
  >
    <span
      class="my-class"
      id="my-id"
    />
    Messages
  </div>
</div>
`;
